Fixed the bug where the box was not aligned in the center properly and added more questions to the pages.

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -138,6 +138,10 @@ label, .text {
     padding: 0;
 }
 
+form {
+    display: contents;
+}
+
 .Box {
     aspect-ratio: 3/1;
     background-color: white;
